--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -39,6 +39,8 @@
     color: inherit;
 }
 .ui-widget-content {
+    border-style: solid;
+    border-width: 1px;
     color: inherit;
 }
 .ui-widget-overlay {
@@ -248,6 +250,7 @@
 
 // Dialog
 .ui-dialog {
+    padding: 0;
     .ui-widget-header.ui-dialog-titlebar {
         .atk-shape-rounded--top;
         padding: @margin/2 @margin;
