--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -16,7 +16,7 @@ html, body, .atk-layout  {
 	>.atk-layoutRow {
 		display: table-row;
 		height: 0.01em;
-		.atk-layoutExpand {
+		&.atk-layoutExpand {
 			height: auto;
 		}
 	}
