--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -253,7 +253,7 @@
 }
 [class*="atk-border"][class*="-outline"] {
     &, &[class*=button], &[class*=swatch] {
-        background-color: transparent;
+        background-color: rgba(255,255,255,0);
     }
 }
 [class*="atk-border"][class*="-thick"] {
