--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -26,6 +26,7 @@
 @popoverArrow:         12px;
 @buttonPadding:        0.5em;
 @buttonPaddingRatio:   2;
+@spaceRatio:           1.5;
 
 @effectSuccess:        #25c425;
 @effectWarning:        #f7a600;
