--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -48,6 +48,9 @@ img::-moz-selection {
 // Misc
 // ==========================================================
 
+.atk-absolute {
+  position: absolute;
+}
 .atk-relative {
   position: relative;
 }
