--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: @headingWeight;
     text-rendering: optimizeLegibility; /*  voodoo to enable ligatures and kerning | https://developer.mozilla.org/en-US/docs/CSS/text-rendering */
     text-transform: @headingCase;
-    margin: @margin 0 round(@margin/2,2) 0;
+    margin: @space 0 round(@space/2,2) 0;
     &:extend([class*="atk-text"][class*="-lead"]);
     &:first-child {
         margin-top: 0;
@@ -35,7 +35,6 @@ h1, h2, h3, h4, h5, h6 {
         margin-bottom: 0;
     }
 }
-h1 { .atk-text-size--6xl; }
 h2 { .atk-text-size--3xl; }
 h3 { .atk-text-size--xl; }
 h4 { .atk-text-size--l; }
